Replaced use of Long.valueOf() method with new Long() which is compatible with Java 1.4